fix plex deployment

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:I5KV33nL/LLEtWNd/xM4wOH3JD0lGr1ClCKr3ymrK/GC/mRDuQv+MWlKz7f97BO61bOorAvH+xQnYmLVmj8vSMM=,iv:T99bsDmvFKJzCGecwzgJOUfcybRUdmaF+V7rK1fEKfI=,tag:YGv42OjkakEr3kzlZVYeAA==,type:comment]
-#ENC[AES256_GCM,data:vQDnj7ljtSqMLHh2J9QXILnvtQv+HgWJtyyLpyP+Koin6swmh9krdR5UYwg=,iv:NPwAWmyYJRwzijbTyhTiZj5GvAx56OOWMY5ILECcqCI=,tag:5DrC5qKNxndsUMYv6Uli2g==,type:comment]
-VIP: ENC[AES256_GCM,data:Uc99yeu9Au/Ipnw1ug==,iv:ElLjTYG/Di5Rn6DIhE1xUBtpq32C8sq6+ZJHxTh0M1g=,tag:2lDR2sSKbQXc5UMlZOlOcA==,type:str]
-#ENC[AES256_GCM,data:MaXR6ij864+LHpTH3HQh5F9Uh1Pw2xTPqKVW,iv:b8cJcEth5W5RoxobTrqQHuz8t98Z7rgem9WKFeaB/4U=,tag:LFxIhMC4sTGdtZF8BKu1uA==,type:comment]
-#ENC[AES256_GCM,data:5We9yDPLep7U/gJ12xYVYCC4E065tSB2Jc8oDYxz7Ag9TK5pbIT+PnPElu1tyY9PvBwjCiTLl1d4NReQC+g5t3hVMHyBpHuzalRifW2qzLEXqmykUEd4Xms=,iv:IXOjfl0mfND48flbeKLa6yPfoFpBK0xQzn2wNzeM0LE=,tag:azTizbmlyg3Y7NVH/eCCYA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:LUVLZAF+YlNhE8+UJJk=,iv:p8foayDN0WZ252nXYEZl0XsHUv6S3nQVsBrZeWiwSjs=,tag:VJ7xKT5wBV8TqPt3MUF3wA==,type:str]
-#ENC[AES256_GCM,data:cB9+G/gkZ/JuMoCGDv6Faxx6NX4NZJRC+DskzkfR2SgzKw==,iv:18qWqTH0U/jyylEsjvY4/ivelZjLctsDoFoInS/Ifg4=,tag:eTNWfOqcfMHBG8rg3L5EXw==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:XpLxOjisTJun+VHbUQ==,iv:rFvUr0vbNdXyeXu0SaIAcO8VZyjlTwgCMOwCTbvDA3o=,tag:+cLs53Hyrvl5XUach61ibQ==,type:str]
-#ENC[AES256_GCM,data:AZ7wQpSbRV1B5lraDqNN/cVVtE1cISR/fScbrhSlH+4lA8dQ9XN6uMRHNAnIQco=,iv:zomA031mMk0MUGUJId+YhVe9WxTxYhoJNxyOkzJCHVg=,tag:9A/resAdbgYRQe6RpM9oLg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:nAU6xKVa/ogUa2wFnfYXY/sEDXAwouwKc9rrM3pNRA==,iv:TFw8lQ8fokwAmL8/33ZECM+NBwiMZjj/51qT19aik4s=,tag:16jFnO42F22B0flqC5QS/A==,type:str]
-#ENC[AES256_GCM,data:Ssku2uOASbOeBdnWuQiuqO8lokCJQzRq7uOeGl2ILWMKWcJOrAVE/WfsWXr90c6cZIA76kXLDbYovfO6PndR9+d32qU55dPciVW8jYcREY0fyA==,iv:0/PBY52P6gFr5NL6W6r0I/HQLdmhL9lIrooSkKkKMoY=,tag:YXF138y2vueVog2sga6nHg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:eds8rK0t2owHzRCR+aYK,iv:Pxnzi6R/zWANJG6KruKyi+nryDBBBRudeIIadocdc1o=,tag:pe5rp1Og6vWiKMpMdkXc+w==,type:str]
-#ENC[AES256_GCM,data:FaMwpwt3uy92pjbtn5WrT4ZB0Tkxq7SPDCHmwvq3IWyq,iv:tUXjzNHH6iQTRvtECbbLKLUiBIS0KxqDa7LiA+/mETQ=,tag:teltwO39XrqMEnJAm4X1Iw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:avk14CSt+FIr8Tk2MfYr,iv:aGyAdP+D4MIdKR/xFX9k4TGp4SE1Egozr5JLZD06kk4=,tag:FvYVJaF2wk8+5PQsBnz12Q==,type:str]
-#ENC[AES256_GCM,data:cg03Lx3tqiLyO1h6S4BJrnKByvGd/aubUsJb24NJ6L9U36J8FfUZ8lOO8ayIjij04w7ao7K2QFklzDpBTXEawJSuw+Yz7toJl6kCJOJ/9sk=,iv:jDamBJZN87SfYO92Tt75782zZmp3ul/mQzbYDwn/rAg=,tag:i/HkJfDQI2q6quLBa1d9Ww==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:/XhDYIo0WwqQwFcjxmTS,iv:bIY0h9PhAoHeg1bD1NRXdVJeRXJdc+/+wBxy781dDlk=,tag:/3YWP5QJEAmY03xDpUaxTg==,type:str]
-#ENC[AES256_GCM,data:pSrn8gX/eEBc8xC5hzpgmTTZbEzBjmZvtwsYE9fvfopq/plqrPkgdVQqwl1cTiPACmveu04zdVPB2wTrS0nvmEYtgp2ni+a14b7Ymiz1Ju7G0q2/9+hd,iv:naGU8NTV5C9G1EosDiF556acdxNL+KbLmGVxRkTePbc=,tag:3YVSfTTLeMyfVM8kagBagQ==,type:comment]
-#ENC[AES256_GCM,data:RWi4hfUUe3vgA73YEhWL4DUXF6gIVMVrL9Ucxj8gc0nFdeU1KGRNTY9jNfZinVNEBS/HAnA+0Ret/H7Timhi9PeCgTxev2N+00ob85m6hvNvbm1SR1ew1BraKgg9OhCKOBfUidOct40ibQgt0CPUADId/yQqkaDi9NF6ng==,iv:fqwkU1GjGcdpsu6z1AbgU08BL6gg8jXNLHCFINOI0Go=,tag:WkW3FNuzqTviSp+lqSMtug==,type:comment]
-#ENC[AES256_GCM,data:65/Tlyqn4xf7Q92ajNuZHyes77M+NkIUfggBEs3t6UtGnJJs1KvTkrVh2rWjkvr0pD1JRUXRLH4ZRl3S7uRIANM5Ap9oVF0VLia2P4wOjUM=,iv:LvjDb2csUkZ8WOXnXXmyHqjXnTVZbdRdJd2R8v4FB70=,tag:PmHvb5gWhfG9ipDetZlKPA==,type:comment]
-#ENC[AES256_GCM,data:HIS5Qfsx9RoFEyl39mtYNzhzFhzRw9cEpBsxCJ1RJ3UsZm4ufahAHwC65Ckd/xPNjadBz6T1,iv:R4GdFOgKWRXVcwz4daeAs7QKSGi88M8lN9cdMNGTwHc=,tag:3oCq9FWYuzrJj/s2X1yYdw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:eeiYKtnYSv1jXfxz,iv:6IalUdxyH0bEBbieyymLqckYHSlUvwlNCh2/sJK6HSE=,tag:Gfsfvk82hcwmTU8weKQqDA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:u+JmmRTPSWKyqOUlayOOwu4=,iv:JkOoIwzJR1HEqciuLh7lLQZjRZ9SmrtIeYsZ5E+Gbds=,tag:odTrUkiYp8GsRwoMdYT8iQ==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:TuInrtDZLQx7TxGCR3eNlxdToXQ6BD9nwZEGSb22owU=,iv:eAd8xOvAd0THDHBmrNUvgeTLAAjrCMxRExixBEnjY50=,tag:KV1eng5A1OOmpQN7XoGIEA==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6PIRPhzXwEs3lEF5Kh7JGN6IUmShVfMsPq0Jgt4D+nzxUJKiVufR1g==,iv:9/pyRwiKd+qDaVUbBVRQg3MH3rEGb57XmivoCVjmSh4=,tag:m8kU90fug+gNOCKSUyvxow==,type:str]
-#ENC[AES256_GCM,data:LvdWe//zSkZG39fQxx2My56mhsKONh/FJlO00uhvbx0SWtCRv/l6vbU80Cm0fhbXHiSQyBXYxpVeRHCHNVtAhw==,iv:UXy47Of+X0s/rIq8xbCQlXyy4gC+4wd0p6ovX3qNQHk=,tag:9g7EMPTSYjIkZk4gN7mgcw==,type:comment]
-#ENC[AES256_GCM,data:GVgxyKMgOx2ytpgeKV3RgNbxcIlGEDi4kq4X9ZqAbnFIV/0tbni6YcRwAOen20UHBniNJe2Iozo=,iv:1RHCWxy2SUBQbNx+FhcRAX7dSE3yqCnHST27zCXWNik=,tag:Hj2yzTt7pFCnJBkwJkvVSA==,type:comment]
-#ENC[AES256_GCM,data:HoIy2lvzw2Q1Mpq+w1at5ur7K/5QPDmnYg==,iv:Han8jg8ma+zPtUwHyM1afcpzlSxinYo4n7EoXgBBjVU=,tag:NCS/ODHHm8itnkpYkk1XIg==,type:comment]
-#ENC[AES256_GCM,data:BZ2xy4ZZy9VEDMBw7iUJPGy61kktxiqEVJWaEBn4wp2BNNWjWCIBqL6ATijlrRZTDJuwDiV3YqJvk2UrbR+hGWfR0LFThF/lkhuIoTU=,iv:L4y6xaqXW4cmF8VNvollxCrmbxTjjloqOMmEgF1GpfQ=,tag:NP1u7msly5C3V+zgcoNg+A==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:moLHJYTBCulYn9maHBIYzNlcO6lA0hjw9odHZHKJ8OvpfoVcImtbVBuNjUjtfped,iv:6TId5AWsfnIp23CGkYBwtyXR0j/9KNfQUypWjqJHFCc=,tag:Y2KqWUY6WbQ7cTIBP4ZVCw==,type:str]
-#ENC[AES256_GCM,data:7cmWXAdd7lm6JmrJdBg/+b7ogAS/4NuofX9ldBcjI5ii3y9YPTDsc1Ojul7FUIBR0V80I9gylkFVBfQBm+Dxz3tAEIyOExY=,iv:JVIQ57hs4IeWQdncrNhS4WR8nYHoqCavAxJTWNVC//I=,tag:8EG6eUH3K1fYjbWcWfx2Bw==,type:comment]
-#ENC[AES256_GCM,data:bQRoU4PkvWTWd9K00zNIfQR19mlpPU2PxDMwi7K+K4xj7PCkC71BW3q/sVqTeAPHn1CAXZbn,iv:MQa9wx4roTUT3+qDpp7N91CWiRlV8BiJkWZszAxyeUc=,tag:awFP+7q7JR1s/YpZclprJw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:Wy8XzDkzWQ==,iv:eTb1yyNQjVUxqngkFQxFXXxxUSl0IrUEFVQlEmA4qyk=,tag:yIHEn+OM1m7zj6FldhlEsg==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:MdkJ2BZxHjXiTeEIlapagHTvnQ0=,iv:eblykVTQnqcPNJTIexiWuUcjrUZFz76zFxAyw3oXMEI=,tag:Dme+PWkmR65EivqOBzrKkg==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:Iz6GQMAdIvohcMM=,iv:19MHSOjaogPRyJbmM0IzOvIEO99AQ3NCqeL/Id0IRT4=,tag:FKp3L/1jF57x+StMXI80Ew==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:oCmssiftFnHtqQVWmelz,iv:8qcsRmQ9ayyoWuh22EYDcajqn4leD9mKqPY8xv+vIec=,tag:rFeFsWLvRq/R/OQfSU4blQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:qz0OeeVVvim0DZE+Lqxk1Paie5i2Wx5nFQ==,iv:k7Ec20LFQiPRQKKGFzufDsT9ihCOVGfhvCEmtV8zmEo=,tag:nMIMvgEvicyhGuZ1SAvm2A==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:GXGk52WbfFeu9dz/WFq0flZuwikQ2StJV7YInFgF5w==,iv:6jIy9CeINC1LcdhYLYUUG5oPLtz/5LnJ/lMQ2wv8DIg=,tag:cxD6ijLYoNyfXgTzvZNgtw==,type:str]
-#ENC[AES256_GCM,data:U4Lxv0Rq8jf4j0hP5Xl3HILQOlsQSVkfG0YL5aNQ1uFSCP1+kC4=,iv:r6+oo6WLwb0/eWHrvC4K4K6j5rrWvLNmC1wIFQoIrn0=,tag:iQDV3HlblutddIQ7B5N83Q==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:utdG3tR/NoK2jNciWMatIUebfTU=,iv:xCr8OrgvShfljmCBZcelD+4wtKYQd8TXFQkb7SRMEKs=,tag:E5Ovt92Dny5hcnKO7dNTRQ==,type:str]
-#ENC[AES256_GCM,data:IEO+V6o2YeWt6OnLpkw=,iv:Vn3eRVG19Afnr31sBae3dPMHp51LgcQe/3+C1XDTP1w=,tag:sRlO21WOUdD4xRxAVNb8Cw==,type:comment]
-PODNET: ENC[AES256_GCM,data:Yp2HgypCldOjPyXTEQ==,iv:OUzv/E4iSJxNUUB+g0kLbBMsiRdiC+tsR9Vj4G2y194=,tag:KW6f0hyCaD2ft1eD6tezbw==,type:str]
-SVCNET: ENC[AES256_GCM,data:CbmyDxm9HmvDxdMymA==,iv:XJVWsIR+tl2EFnJHbRuXKfjcEGAiZ52YPFSS8wOkYB8=,tag:/waFUjbSVi2zDWJQN2Y5rQ==,type:str]
+#ENC[AES256_GCM,data:9fGoqZgIIXEVP+BviiGLFt1gtandXVFRNTr4sJbrSNjtk3cK3zpAwIJ14dAnyKT83zH3fSJ5zkbGy0YrTLYpcKI=,iv:xge/GBgsAhmGTXJx9yRVgX6x2YV0MXDmZl5mF0UvDXQ=,tag:R3SRD5oAcyw1J3COW+499Q==,type:comment]
+#ENC[AES256_GCM,data:OTtxcL6W3G8bPgT/q2yoPeUpyukixrQCXYvHwDxBONtVKtscTEGYKt/odbw=,iv:PWcfXC7TR42IkG03Y9h9EWalw0jX52HUp6I3aF/88u8=,tag:bN22JvPm8RNgS340uNYUwQ==,type:comment]
+VIP: ENC[AES256_GCM,data:bPbuBnVSnCg7/swtJQ==,iv:oSv+bRFM+I3DxxoJ6P6u23/Vm+uuTn3NBbsVrDXHvQE=,tag:wiITU5hFVDF0Q2ggH5PSJQ==,type:str]
+#ENC[AES256_GCM,data:w0021gUcMeaxO52Y97ufGoRIuibogJP/H1lK,iv:0DmyHsMtxjDg65a0hQoCk18ipaXl327W3DCp23htMoY=,tag:74WHvEYdx1YfcWAA9so8bg==,type:comment]
+#ENC[AES256_GCM,data:XtPj9RFDMaFAnA9bSnOW4R73YnVvgNNF8ut4bBo2Xvi+0YrKtjPgrrdthAVFWau1FA+vOtXQM0gRQrUai+ecrhQX06zmaVArB0Bv37BfqDRQG2qGUBeB8hM=,iv:jzoztXtW6kFR5bo/7Unpv7PMPfjoivODwn6feThDAXM=,tag:OXWC29Fq9GUjhqZndjhP1Q==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:0NU+iNO0tYfyPkJ86c4=,iv:hyGSILrCV8APjJ9hXHgUmj1W6L89DxcsAiJFy8Yr3uk=,tag:CeaEriBKmlDxU60Lw+2vOw==,type:str]
+#ENC[AES256_GCM,data:lZEC1zjVsUbYQCT5AT/0IGVIpflf41JVHFwDspuZRFsDzA==,iv:OV/RkkvFmS0ekvQ+c7xcHnqr1EGQ8wAQkOZAd4ZPYs4=,tag:smeiC2cUenm52sRTRbz4Wg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:x9u4XXCvF68VjD27AQ==,iv:dmf261WOvYJG0T3KnA/cZvsBzAe2wZL/HxQwIIrAuz8=,tag:D6S93s3fuNMgPgkrfb3nQg==,type:str]
+#ENC[AES256_GCM,data:66IOQ54LdnYxhbmFRMtfAU6n9oZ5yAkkMs7RUqt24lZ7aoEQTlOgCEXxZ/9T9Ro=,iv:1sGgH67X4kyazPYgiq7twDYps466CQH++Hr0Sel5eUI=,tag:45LXZyuHr0DjCan9He7RfA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:+WhHnXcHRNdNlAOnulFaqIuV87sqJYT11Kje/GM8rw==,iv:o6uMnyyzruE01TDJ9RuHkTfZmA7I+9fIeiWehS8qUo0=,tag:AKPWuddHjQY35/fMXCu0Ng==,type:str]
+#ENC[AES256_GCM,data:VSY6Wlg+UqXGq/Yyo94Rn2fZDCMjaXMec0g5Etp6Nkh7NuqiQaoUxDt7R6xJDpYeG0PDI6mRM3zvZ1c1Dfgm4idK8OxoekRLmdasuKBj6TTEmQ==,iv:gCguI0jD7mOZLItD5+S0TvDocyp+6d5xPo85D49z2cs=,tag:rCJCFPR2daMg3RqqkaUyew==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:j3FDLkfCX8zJjq6wUUBL,iv:DGpOi/KJs0jHMpzM+OkzKT8o7I6uVGYZhAyDisT7u7E=,tag:F8mpBo2z9KaOSt4PuhL9kQ==,type:str]
+#ENC[AES256_GCM,data:64Fp0h62GM0WS7xCKABU6GbpofU6UGA6vkuyaYsPcYww,iv:VgGybJ5m/hXdPXrsg+H7k9ikKT7HMUHI3FklvfIv6E4=,tag:d9GFeBXoqdNDxB9p8BGMjw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:IXRXmjcGANRq7360ffiu,iv:gAnVbz7iGEYOc4AWVsSHym4klHsbFGI+R7N9Mm6H1A4=,tag:0bJXpNLpGRVcmc+ive0bnA==,type:str]
+#ENC[AES256_GCM,data:XsATqm8QHMQRfU6Ms9bxXCxEJTjmiok5l0iKr5BeqYKc1VB8y3ugtF8K5FqeBoc7aU0hD4FH/5/gC8JKOFcxRmORx+8fHTEMMEJfzdk4yGY=,iv:+I9b0gIUJr/6Tg1rERAC3V4LCqbW3m5N2balR615O+o=,tag:6EnZy2QN+U4hNZaj0XpQrQ==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:3lY4sc/gDolRHX0DUARD,iv:cjwE2pRnTFoFFo+9+JdBbfNXZCDpmygdUp2LEdYXKNg=,tag:QCd0jFPUGdXq5DwpURYCRw==,type:str]
+#ENC[AES256_GCM,data:Kpfr8OqwIMLidVg0pGYCcFcTAUoMnIn2DIruJp1apXMy/ZRolehu7t4MWkd9S53b/BO3Kd5Bl7ixO70Fwey9TPV8V+l3yHG4n/glRLaC1zSXDMDLZG5r,iv:mt7g1QpV4K3vcgug+SSGE0IWoZz2lKBcp3OpGib0LFM=,tag:7m/LteLOhKuaEGjvYBKR3g==,type:comment]
+#ENC[AES256_GCM,data:cMgWk/vqcXMLFRNvZnq0a85sSVjOYZ2+auHWGESPZdkxotmgOeHNdBZZoW2XC9bbReBp27WCycI7dJAGRTm69en0K3F+9ep/YeP+vwcDpmwx9ZcLpi3PBHb517NGa49XmTR5sAu7qBYX1ubmdCaRs1PQwNpWyOcJ3QqtOw==,iv:MVAQk1LFMUlwXz5yOHTKuNay1l0rYDscAyu7rNOlIIA=,tag:FCeKjq+8GdSzNzQMpTjgtA==,type:comment]
+#ENC[AES256_GCM,data:F3+qhzGdv3yZyiFFjtKgfoFOhXdTG1BxBo7NVXwZkrXmuMNx33AIZ2WGVpwUCiQI46tOu6YuFFFpgGj8QSiNCZKcEGB5ousQMnebw0K4mL8=,iv:9t35y1ls+ZWjfsXll4hekaGaaXEKOikqW5RZWzdZkgI=,tag:McFjTYqdBXoOvfJsPUkJEQ==,type:comment]
+#ENC[AES256_GCM,data:3a4z1j9u2327FAupSgHhpRiBenNOkOmr5zoqsa6zx7icMNE12UYBt/Pnh1L78S9W4jcL51QB,iv:enW7rH36OfkutuoCt8b86XqEu01bP5xPxxoYhy2s4mc=,tag:r61sqt9mSWzseRO8RWnbLg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:7XIzRcOTsyYBsN2Q,iv:/ALQrElGK/yfDyzENKpzF7ENoQSQ7rfa/ONEKZfOmnk=,tag:vOLKjxMlNJ2skUr/KdVRDQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:GGl27VXeBPxRD2F9ePMNja8=,iv:X4Pznp5i1gtztZ1QgT2dqeCPAGpZ5gjKmgOM9vFR59s=,tag:9MKH39kg36JW8d98ORTmeA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:MekozMc2JFEr2WTFc4X2kjJGkFuKsxNPwQ3/ojXjBHA=,iv:5Q+U5XvRx2PyDLonrhe4D9KvwPMgp0qzZ89g7enmp0U=,tag:QcR9Q4DU64aL1rYwO6hDcA==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6WdqgOTRd8/DSBBx5VObHueeyrb7JCqg35fcIwlJN9Swm2bJRY6MdA==,iv:kqBqOA3ZZqGeQSh6av2eD8To9tcJo9kPMv/7kyDOurU=,tag:2yCtighDilyH6anD5Km3oA==,type:str]
+#ENC[AES256_GCM,data:T5JVZp3lfCSAojsmaCrugdKDhn70U0JPBzpsNn4j8R9YtbWd9+3ujALjsXEiRrkxArp2XFxTTvJ0mX/y+Bh/Ag==,iv:GLrDseT4ALXutrWzKCOC9IU4Z/uE5XKfQOIFh0t4MJM=,tag:RibYPA2Dt5u+/qWTtd4gvg==,type:comment]
+#ENC[AES256_GCM,data:n+deOMlWAmynwU157XLpi9M4t5LmNw8J/3ZWbCq9N+vDa77wqGvTtu+Vt5O43c6KFhrNKA+ealI=,iv:yvVQui7VAf42xljJTuGyUJVek+2c/XcLznYFl9c/Bvc=,tag:330A9FmKuHWvxaOjMzZeDA==,type:comment]
+#ENC[AES256_GCM,data:5MTT5Vtga45RymbyJtp80C6YpyCOBtO2Ug==,iv:7Brckci9IFQV0LltKqAvjuJIvNTIpFXeO3HgkIhZHCQ=,tag:mJgv4CM3/hey3Rdy4jehJA==,type:comment]
+#ENC[AES256_GCM,data:mKYFm65OBH/Uejk2vRL7ClG2fVFcZcCw2NilQaYpezYBQwjzvjxn6EFup6eS0gouLIM2cfY59wc1nAgKVFC0ukahiC6tIMjLucJY7Hk=,iv:bF1w5k/jlEF54ZzzK0wmi9Ae9SAEyiqYIFX0ASRhyRA=,tag:3g+nGZ7fDSAdb471Cc1/kQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:yoQSC4RgZgD2v+J5GhU/matw4ugx0fzsTDt8tZ4Gl/o3JZ+ZoaoDzmv5yrxwSzM+,iv:HsYjs13qg5MQy0hJHQTiu8+kN4IFt5lpQivNLXHizio=,tag:MCWBmHfhNUwWeYRmk1Q3lg==,type:str]
+#ENC[AES256_GCM,data:BbqkjVqke4ZTEObrjWzKPYpg7nb4UZQYIadTgr5cwHDNon7UYlne0KVbmcjVCXPUPT8ahKK0Lhpx0pItHU30wnsgjfoHkYE=,iv:NvrHn0Iv0t4huGBpePytX4hCg2rAlKD9QhvAr1RWDf4=,tag:z7WKWL7Dh22duA2kD6U2Og==,type:comment]
+#ENC[AES256_GCM,data:Y2LnkNcuq+wDr9TDuXik7n6E3MZVhyuLhmke5afaZ6068AI/Tn+o9eVF/hldd73tHpNrYWpn,iv:QkbQpqvDagau5Ybp6vlW1Uoa2lljXMAYfKYAFRVlBco=,tag:tp2sI9B/cOhP4e1dabSH4g==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:dC/4h0SYZw==,iv:x701k83c3uJJG5Ma8Ee1Vgrf1gaURMUb861fWdMuYsk=,tag:1CuiOQZg6MHydQuGnRjr5w==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:wx465EVuAh13RjqREzxHhYFhAJI=,iv:0hnRrwj1zriIHq/AhYfinms4JbyuAyu3TxRTc7h9zc4=,tag:uHOtZ2J0N9jXiSU+QT0l1Q==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:F1LGfgO7Ef1VO6k=,iv:CAezR2DPEBNh0LbdbHg1qa5x/SOko/DxMwSh3xNIeBg=,tag:ck3Ti44xq4jI1fNLB+jxrw==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:IRLHFdF6zzy7YbF7rtLp,iv:fCPZB6E0WGsXaq0bVRBeb82IvE7dSnV6c/GIbKdyPF8=,tag:rCVYI403GQoUwX83ZnddnA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:TIm5braQE+K+fjy4xEcSsn8x4hYZ5TUpIg==,iv:QX8HzF3YjuIJ5h1o20xVxQOYgYFgZAtNp4lSk0q0UGk=,tag:TCbuo7hqEX8fGRuJRquAcg==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:0xBdJMoqknrJnRyWbJyVaF0GmaDkrL0N75m8PkEF2w==,iv:quV5vGSxlMIbQw4sAfANYTjx4vdqVHcHWGfF2oOokaU=,tag:LVKfQ6UppHEle5GXllZJkA==,type:str]
+#ENC[AES256_GCM,data:OIKGeONHG9NIemkiNpUVfNyPZvi/PHre7BSvkUkqAJ1PcesIdAM=,iv:s8Km4YjtfY5JV3aFkzXGfP7noYLGzxZ+Y8jRvWa4tx8=,tag:WK3skTovE3CoStx0gkeJNA==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Hs8PGKtDZxTAttGHIF/ZLOOLycw=,iv:MrrWV5h3rsr+6zNWFehNdrX8nyOFpIoX6SYKIralqyM=,tag:WTpTP5Y/xQhyyUE2uGWUgg==,type:str]
+#ENC[AES256_GCM,data:TxVC3N5UR1o7nqdhEfE=,iv:16iz78tF4W+fo2CV/jbjQuMvqZq22RNKKMX3/bnHnBw=,tag:+ToD/f9Gd1PiqahEFjE64Q==,type:comment]
+PODNET: ENC[AES256_GCM,data:iiwUk3kkL6Uh+DQPAQ==,iv:hdc+SvvucPUJy8r34O8Kbc/bvsQswn0zJcgdYjdbBW4=,tag:HuhVAnkLATDW0oQBYEDy9A==,type:str]
+SVCNET: ENC[AES256_GCM,data:tWU7n2/oj5R6Cj3mVQ==,iv:SHO3Xp/fYU0M8bLmezP1+DeYLxLEjg+49eMS/3tuSlE=,tag:1o3EVqlx5xTlhLwhrWLX4w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqS1FhYVZFL25uYXhsRldK
-            c1VISU1DQWgwNjVPZkoyOHBBM0RoM0srRlMwCi9JVlZlWk9qZFVVQ1dEUFRjK01V
-            T1FyMHV6SDlHT29QUHJUQzBIQUF6OU0KLS0tIHhjVW9acXovUXQ0U3R0RDQrbk9X
-            R1d1LzZPM0lGMlZvVGtOeGg0S2ZPZ0UK1v9E4JmBc4/SWwRPEeudEaN/IRBxBZTh
-            5tCwYR1jwWxSlfASEyPJolanr+UkZOn/X06v8394Bd3IoN+Ja7px6A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlYUpvVE95bXVTV3dNdkps
+            WmVWYUdQU01lSzBQSTRBK0R3dHpnR2ZuS2hZCnlKekdaREFlaDBvclNDdEluSWJ0
+            dlhzcFg1YSt3THpUTk9IWlh5b0N2Y0EKLS0tIHRSRTdoMlBrcWVmYkk1aFJqR2hJ
+            aXNmaWhRNTU1cUhGeFczaXU2ci9tTjQK6NN8n7dFACaOed+DtDlqUPdHa/nGaOrb
+            Vmp2vfG0c1X+PSpgHveS6SJjtf2L6DQIu/4QcBf17dfJhZ/iP8Bhgg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-12T18:27:45Z"
-    mac: ENC[AES256_GCM,data:6w2AT6Sgc2S5nQwA27En1p/lyhauyzEW55GUuyjGr9LcGBNZGqLrq0PnMeHmG85/MgAuAmP1xwZJdvmI1GeVzjN5xlE+GBlYWGRobZIvsWM2J4ATS/BlSDQNTphJVxRO8TJhGc5aCUXXjvs+fDpy5BEUUKhIb2PizrVUItK3+1U=,iv:Lik0zF486Wx/oQa6L10AwjBov+L2G3VFfYVZ/X0robU=,tag:padaTkRSzkA35TWvag+f3A==,type:str]
+    lastmodified: "2025-01-12T18:30:46Z"
+    mac: ENC[AES256_GCM,data:qD0B1ib//FY1xq4Jvn70NqnCcKa2lbG5ODyBME0kuSCcxtasLx1RxvhfdX095knE8zE0mcWu032O+21VY/LQnbl2Eu6jY4rmhABrYWmjuj93gwdRSQwQKZQNxHoqEUzqQavhNkItGzAxt42V+pEkt33z9Fe1YIGioux6ImF5kF8=,iv:VxCG+11xrLH4Hy10BI1msI0dCNdhk08IsFf6w/YzVmc=,tag:cx5Py8/gn/ImKl2RsYdnRA==,type:str]
     pgp: []
     version: 3.9.2
