--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:z4ZgyYYTal6m+sivdbHWVCX1YlXhTsg7uiZHDCTv0W9DWknIqO0NkfKx6cC21eQWi6haS1QYsuwNCVzy+UIL5CQ=,iv:+zCFwxlBUzJtwDxxC92d3YNTW+BKPA2eVcBQM89y8Fc=,tag:K8gH0MMIx2k2d8vijrjvsQ==,type:comment]
-    #ENC[AES256_GCM,data:S7+J7uKyGIjO9WnOqFK0zQxusOtrgo+GCOEXmONMB/vbJtQcfq6CEjQ/5T0=,iv:HD5dzduRw7fjJ+z93+oQ3O6/6faIFM7L84ILaRrXcDY=,tag:584bSPrtsT/DZi8hswhq1w==,type:comment]
-    VIP: ENC[AES256_GCM,data:sBx309G5EyffWPLiDA==,iv:qf4ZHKsnbp4JWCZMGdmZHAzjoEwx8l/eQRBGzUahCf0=,tag:RbX5tqyaRElT+Onpe6/Yhw==,type:str]
-    #ENC[AES256_GCM,data:C4iAvHd712Kskcx2CFXjXJkWIe4LgT4rte5v,iv:uY2bdrSUzLgH9SiAu5mPrhis9vzGiYp8iS1lILvjTVA=,tag:xpx0OEeUxqT2n+aEg4VczQ==,type:comment]
-    #ENC[AES256_GCM,data:UpKExriv7bA4IOm3VDDEkwh+2wume8nYlojPW+Ar4i57ZEwCgJyy1CI6ASxokl32HNP5JFdl2V0EjV6YiH7CRU8LSa8j4giVHevQDz7M2uzP4nbDGmNyWSE=,iv:iHg1w2a9fyJblVxSgVKKigGcVXLxSnTs+QHssgF5fho=,tag:BJFmqnnSQ+QOtAQX2Zn9Dw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:fTPm74FR8K07ifqr2UA=,iv:6kRqPJkEXLvHez5A7r/gjFaJi8cJpkCbfEiGZSXqrr8=,tag:aLkZWb4KIQZ3OOBVadFJ2g==,type:str]
-    #ENC[AES256_GCM,data:CXX3kl6GIPgLvGSCoPCROl7B3MTbsRzBFq+/Sezb1ybjzA==,iv:t2SsHVIWmSeV9atHpMIwnQVJbwNvxpzKAcIKnTl1O/E=,tag:M7YJ+hjTwUqqQQ5e+vWmEw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:Z5t33qiJkmiTKGh0+Q==,iv:5dh3i96aLEy5tx0njZtCFflU8n3sQD4oFDDStAMq1f4=,tag:BJw8nqDxYp5rUnHmloXwnw==,type:str]
-    #ENC[AES256_GCM,data:G4VLGdhvoG4bdlrXerftjQHhLDxfmGCL6EQvnXTPNDaGQ8osUcH3JB/7/xOsgrc=,iv:ilDpfp/hc0m8WOOXUR76HPu6NiXniPtA5LXb1tGHRCU=,tag:bIUATmt2F/ZJKf0VZKxIxw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:nNI71UJ0U8Oj247TLKvCBdrbjwvN5SwUDNR7h1Li8w==,iv:35wmMDcfSN1t3x47jeOY3LFb3IRPjm/y2EgVnOTCgL0=,tag:BDWCrto/er3hJxfbws3gTA==,type:str]
-    #ENC[AES256_GCM,data:X9YykqgsLCiAEmL1ee6I0y/vkm/RLTZqDUxLAbwRQ/rGe5Onwfob7b9hQpCJAmtRhnQf3T5t1/ttghMGTiwkWCTiqE1nxnpSMCTDJtRVbQkhvg==,iv:JqkLuIeIFt3fkO/2K1W/+GvF4LkqIlQuXhD6o+2PDH8=,tag:GjzoV6V6LBmdiKyVOMAMZg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:3/zvkcjUIeSxk79lipiv,iv:U0TF4wDmUEoTEv3aSeqKWlA/2HwZgXV+T7YTcP/u9wk=,tag:UJvZY0NI3EcngeBV/f6nQg==,type:str]
-    #ENC[AES256_GCM,data:aWBl6YGfQLfcKpZjX/qg1rluLc+Ir9npt1gmNhNxhE0w,iv:zkOKqAoOlcRhKwgshaNO8eLPB3ZXpLi266ENyi5DZO0=,tag:6T3E4uNn01WPRhu2pfVurw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:IoYvPmWq3s79IZtU9nUN,iv:t4+ZK+H1NDoF2lfdYIgVkQdKp3tic/xDU3459GFkQDg=,tag:EH1cuNevW4s3QFJproHEzA==,type:str]
-    #ENC[AES256_GCM,data:wmDO+TT3fJ6TnxHjou6eHwJXi6RqsNGFbElHRNzTgeTFZOSEzH0MOTqy9iP1OX4C5tzViKCuiQlH5lhmpQWOB61VIJkG63/Y7vAE0t6k3Dw=,iv:bGTzKqtw2vtFC75JZsYYFEjklLtBpSzntmckdRvTCnA=,tag:MbVbz5bjk0EQVV22o041Iw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:i5SCWxFFGLI5neWblir6,iv:KRyba5AVm9i0jGX5v69WX0VmqABS/LUzUuoR/SDK76o=,tag:pSxREJEs48yDBsGQScE1hw==,type:str]
-    #ENC[AES256_GCM,data:VAOFX1emp4v6u88tckptcRXBvdITgoH6wTdN+5mCesLudrvngN/mQPlPp9tJdAJ5CocTrmS56ph+YBqHLAy9k94fxsSY+Q5na9WNSYqF/pfdKuyojCEh,iv:esie/QYktHgPuo/aLD43oideb2P9avq4+jTwr1SI3lQ=,tag:LGERIxa+yDyRj/pcGu1t1g==,type:comment]
-    #ENC[AES256_GCM,data:lCYP/grWuHfwlVXSK3EnY4lfoJ7qaTBv5w7kZt/T6i8BF9ri3MRhUkyaCcHOYJ9YlC6nhNOuiErucHIf5SjqrrffhhPXqZfhkQa6Pk9b4/nDDGYhnZP9+ZO2uA5lst77ov8VgXV7gEvpXrsHebH6wI+japNeMhdFjOZvgw==,iv:fX4rbMNbJpnn7dtk4e4+disnAWphqjAuSKRejmjRfAU=,tag:BgTzH5ZfvEPVxp1BW4bNYQ==,type:comment]
-    #ENC[AES256_GCM,data:6fC74GOLYOb2f2l9zPydYZkJ8BKrbH+tdAOT6/sYc/knRWjUO8jIiiwEg2IHdsXvjgwnjW0yGPugf7S3A+M81UvT8PwbTQ8E+Tf4WKpzXC4=,iv:yuvOJDWujp8eW0Ph70fKwx8VWRXmiedpPu4+rq096lg=,tag:32AJDh/Uffcf9II822++9A==,type:comment]
-    #ENC[AES256_GCM,data:wBhYsPa5zyl5Tx+TvzDLKIWA1XDZ0qmpu8BG+govFzxYqjrbL09s8sNJkOjTWtCSg9sA0bsi,iv:IloCyZwDCayNXNix0EmZDQIiPoVaXTQlsMORovVJ4eg=,tag:agZm+Xn3KYAxx3MZqryGbQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:IV10gZkJQLkSZbxw,iv:BaM1zIRbODMySyYpqtw6CIIXkYPzCJvsGD9NcsQzqI4=,tag:YPXkti0czce87BQRc+D6ew==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:OXxIlv8DfuSIIJ68y96B43A=,iv:1GM4VXinR8e9u6p0xV4uGuWglo293Tg7hO2uZyx2eDg=,tag:eDnqdaLrTxVInG6MGHtUxQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:7jMz4sJJeWOHcuAQY/tT5MbFQCt0rVG7NR/II75ltEM=,iv:OQbHFJdDnle641DgQmH1Yt1zocQotEBSZ0/EIEECN1A=,tag:sdassr+RL0mPlzMd6jIfgw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:AJh+L+wIMXUnKPOB7Lk1/eRXNcVhIImKjQtewdWWH6pHp7X91qU5ww==,iv:+OA7CA3ny0MoNqZ7razegCDRWkDUZHB8T6j/LJ+19Vw=,tag:+r24jXkrwDBmiWa9ZvlWlQ==,type:str]
-    #ENC[AES256_GCM,data:lEWi9YSBiIgWDDCCSmT4T6nEmf4W++JHxm9tpcMAmPS8cHducO5sWz8eW8yJMhWFFu90jiO3gV/5REN/+8u5JA==,iv:iK6VDKVxBrzYr9pS3Er5MICmlUM3QEy+MtHFbux8vq8=,tag:3+x/xxSn6nuZRzZiIoeq4Q==,type:comment]
-    #ENC[AES256_GCM,data:AuizrJNiD8PGsgMI0CfuDfrjwFZIMFaiW32TtjAye+OiE+ICYjAADwpULtj5fUhMGw2CMmaR2OE=,iv:mQWKKu0oQByvK1vZxKvrK6pyU5tBea4767FZ+JiJQK4=,tag:lxILg8DOeAB4e7/dLijG+w==,type:comment]
-    #ENC[AES256_GCM,data:R0sr0Qu+W37rXYBXHhp5XaoZeQNlzJkXzw==,iv:EaB6b965Ti7lxTO3WLwOUWz0Ud0aQEhDpbJa572ZDSE=,tag:/afRv2qDBZmNtLEHDkmVgw==,type:comment]
-    #ENC[AES256_GCM,data:u5pOMZpr5UK2wU6PwBBFYPPKLNPFmt09UVq2gYOvJftva/8e5HDS9T1aIErk23QjqJWr4kM5qYebI6oOvKSjM5V9Y0YOBjlpaeotJkc=,iv:Wv0EsoolwbwWLMaVd+t7SfbLb7AGxG22Xi3X1POANCQ=,tag:osYUhIlgK0kf4otwHzcPJw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:BheM/Da7CS0UVG3d8uWluEbKyNDbD/5VhJ9iMdOlO0KR8S91iAYc6VgwwWU1UdP9,iv:ZED7Na3wG041BgU4W8qtPowS71Glfl7hggOo2mCyESE=,tag:OEME53mbwBrpIkGjpGYpFA==,type:str]
-    #ENC[AES256_GCM,data:ixr851Mgbbs/bOtXZ3Zb/AijpDbQaiIN8TqR29m3m+8wShDqNbDQOuUs8p/vZ7fFm8gclWU9Bqh5DfBu8BgbxbpVxkn1cL8=,iv:X6ZFtiNlqQvmMDVZjJVmi9lehU5hdIGTVVG01UqmWo8=,tag:Pzkc99FvfW2uK63ZsZYA5w==,type:comment]
-    #ENC[AES256_GCM,data:TopyFij5AgrANl21ZiKLPuHuDI1xKgEg68f9BACpGNiq5cCkQO+GWgPSFx9De07Ji6gr1YvH,iv:+GnSSVr23ROYTi6H9o82TEd8urREUB8HQqvcJX7UoP4=,tag:Qek380V9IkAflBBtFfk4Qg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:DvzaTsE8ZA==,iv:Aw6l+m51PIYKPEKbZXhtZBRTP6eMcxlyAI0YqNQt5TI=,tag:JuaUNb/09UVKkzaRCI2SjQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:sJo72xec1gow9b0Pyo7Oq7ZNGh0=,iv:PbmwWIPc0okJq8FsrTYNfRsBRczMXrrxjItGGzdUrD0=,tag:eJt0y2JLu6JkUNquL1IKQg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:9wKqF2kVq/9Mq8M=,iv:NOlE18KWitNvv4xrbVv3EzlcaIG33cuhnMtQ5sgcYr4=,tag:7AIiFoYQqyIye24lRXb/pw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:x4udicGCf9EzpQ66/87O,iv:Cq4Dp6WMQ7cz1D6yLKn33x/f8DLP+NAQVl6TYnpo5JI=,tag:iVjZDbwV98LqS1dBMGN5vQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:ei+fn/g/vQm3H8ANmdwcz8VkwOT8fdsMJw==,iv:3AyAQNX4kfrluOfod5RnTrs2CCBuK0CBISibP7voesk=,tag:kCPqhgkqvBAGjym1KRDhPg==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:kBve10Bd0A69kFbdQ4/cz5eJpEpr0tjRzyy5WDXZ2g==,iv:N1nJKVIW8u0U2hcmRQ9ti821OQy+kNq8ofWKflLeHK8=,tag:pRbYZYuBW9o2VoN8RnHxAA==,type:str]
-    #ENC[AES256_GCM,data:DG9/r9H/UPRfMt0k7zh6oq7iwEuoMbC/VXHbpOzeUUgOSyvxFNU=,iv:NjlTYxvZwCKmXJnNwtl2ODO465uCKjfZqw73RA26uLo=,tag:PVJ3u1GHQBNeRLDV+V0qRA==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:92ln3UMT6bgyKfPVOeOhU0zZ4tc=,iv:oBdmckRWWD3jvKPTkdfZF3CLKTJpTURpU9AvvN6XXiU=,tag:twYFBY+FczpN7IeRTNeJ2w==,type:str]
-    #ENC[AES256_GCM,data:RQ1IHOGjtIxOfzFiE7c=,iv:ynlGZ8IaUZH7i89BYbvXCulQiEeG27acT1RHnSkrrb0=,tag:WkCSYffvR4R0gAzQMqEtuw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:qmfQ5pS3jhZS85Y2bA==,iv:znd926RxkNMQZQGoa5rezNrTADgz315ipu6JUpfiNEo=,tag:21qaxXIjjJ3wEy69dhmJKQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:FiDH6b6bV7Cgl2UteA==,iv:E7CAYKsgJEV5YUydssuU+Z170g+WNMyenIt0xrXTMnw=,tag:B2NQ+DTH65NwyhSW73GCew==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:FJJONQ==,iv:upHMI0WcQMQ4yNMGEQMh7c4U2tkoyTG8yuhgbmtrUNE=,tag:2KIImHiTY1mOcoVfeBgMjQ==,type:str]
+    #ENC[AES256_GCM,data:Y/KuOAajalpWvdIeXQ+QnhFa598851RmWDn19MYtKL/zlpH7eSjJDB8rktR3k6kbcNpKrTK3ALDg7vVrUQ2KuIA=,iv:/4b/LhGyjIE4kH/J077gV7bCPZsgicmGh5WdgddF8JA=,tag:RTwoGFyX6fPEjYCCRxzrqw==,type:comment]
+    #ENC[AES256_GCM,data:+KlDvBhXYVsz+riKFV2R2E4X1t4slGLmmvo8AFGa6uUu0JtlK+k6F/+GCd0=,iv:lQsBZjYPOacqPNrnjO9uLXtIzG0QQUR8z2XYpwHFlG4=,tag:A1vtvdCJg7YQqmQPeKaM1g==,type:comment]
+    VIP: ENC[AES256_GCM,data:/cFusphiuRE+taWGcA==,iv:qT5EA7JkwWogDmxmukfe/G8K3KicmnQd5eF3GsSpVx0=,tag:+vT0Ic6Jh1zFCDub8YCLEQ==,type:str]
+    #ENC[AES256_GCM,data:kxqyH/Kn3KW0+Fu+ZFoErEorq6vThvxc0vAa,iv:uJ6+f3p+b+SjcHb4TPjE7idlJvh3u/2t34baz/oObi0=,tag:Ia8ngB8x+fxVKU6XtAsE6Q==,type:comment]
+    #ENC[AES256_GCM,data:SHcxqkL79YTI2pU0Y+wjzU5csjLU5YpBkJ7r+yp/jxosqQM3sJloHOOvMN1h4jhxrEZEpRkq5DAnDqTs1eU2zv2LLJ7OaLIVbUl4JTv/ZVAjE/JdJVis2cE=,iv:gji8/VBJplueqk9/LR1M1EUdRSOAM2AUcabmjJzOdYo=,tag:Wx0gzeZeqM2DTslpK1iVBg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:KKPqQRetuO7SHsJ+qSA=,iv:g5QETtDfYpdPmN0ZRee5SpU8vWsJuDdR34bzun1HNR0=,tag:TaNdv2BZVrSXvnI0WfHPEw==,type:str]
+    #ENC[AES256_GCM,data:e/Rq6quKAdKnUsDhfNQOW3au9QxhgmoaOJqWsH9F3ZyHrg==,iv:9rzpZosDBzrNQF7ze7S3enSdZvq7YlQe7eyMHJ5AC7E=,tag:czZI46uo2HK0+3K5ESnRcQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:jee0YE+66Rb4P1R1hg==,iv:QE6QeVZIg9Up+JrcR/V+H8/9XaQ2JPY8MuiU+nFoH3E=,tag:CFmSwJg6EoNCSBoWEDuh9A==,type:str]
+    #ENC[AES256_GCM,data:hUjo8+EQFlvm10Gro6ufp4T5PnRxXdmko/W3spYKJH2uWzDMTeXdcvHMNefCaOY=,iv:VGOIwdXQWpgHR2brE1l5d76cnDyvcz7Ju7HhWpoikD0=,tag:g0S2SVNaja9v36RD4zIeEA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:2jck94dSP6QFvlQSR0+XQ3BgDdYXGFaHNq5pofkxCQ==,iv:4iofMR1lUsGZIBErDhBbGeuPN6NmgNVAaM8slkIAQIY=,tag:qAOLu3uu9/9eKpQoaEjBJw==,type:str]
+    #ENC[AES256_GCM,data:Mt/GT2SNbsoF4vu3MTXs2xCYKVDo+0qs+Ox0ewWDRphsZFlj+soByixWLM9z2G8s/gvy7JCFRIIcmLVj6wEYt0KAsJ1lkDlDQoO/DBD0ToHIlw==,iv:3sVrtX0uHCgzJC2OfT03Y4TZ/g4qVuWjvr1B+P/G/sg=,tag:RiixNJ6fzkbOqGvnQo3oZw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:Q96CqwGkKJC4qH1uI3wz,iv:FedP3h534jmZbujEiny++nVdVs+Wt4MO9JyZjIHKrNE=,tag:zpV34P+0mpoLUnGV6ZKpWw==,type:str]
+    #ENC[AES256_GCM,data:LzLuBcrpURTbP9RKEemgU1ATSLYB84UasnVGQvkewNDU,iv:8r8KlEqDUSYrx4Kz7yLSHnLUxfYWdqRv48jWS9Avo4w=,tag:1YDSeKiBmn/Wc6lhpc+3hQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:gN3Cfp/w301cPJdF0ESU,iv:M2MeQIFk9VuC5gR4MhmjuETUL+/2Z/jzNr2EhJbk4tE=,tag:MeLuL4O0s4b6ZeoU1uD0CQ==,type:str]
+    #ENC[AES256_GCM,data:DpAcj9LJ+kX8m34k4RgWvV6Sg2qrGJ8YrdzoTtAnD1xgaYWOeA9gfB67qhYa1NVT3dSQ6j8RgZoS3k4Doy7XS33uKr/W+VxCYJ52EKQq7Bo=,iv:XJeQTVO/ACXVUplDf3iAshFG42CjY4Q3rdD4Hr1pWic=,tag:O/BcAR+52TgOpRcP6kdExQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:SoyGUIWtajmwzvVvSEIr,iv:/Ed9sd8xdVmTV688mW+8WMipwc0Z/2+jptEKRsCO/zg=,tag:DUf5wK/NRi9UqlIslq7/hA==,type:str]
+    #ENC[AES256_GCM,data:lha49JH58t9nlVOtmssDVPo1aC79FkUYMcapO6ukPsbXIV2PFysJC69yjM0yBv2g34kfbEOg013kakBpHNNCITuANIRs2Lt8rqXbXjJZ7yN+8QrtWEK/,iv:t5qmiJ1/qhZ6s3z1rimEewpMAi/3Y7PN4+lLLyHPPWo=,tag:vbPHPsAkEtBNan1GeyU8Sw==,type:comment]
+    #ENC[AES256_GCM,data:9m1TgGY7bpq43vDrCHjoS/PFkKjFKfLJUaLfukOPTXXCkVK5wFi3bkOsdazwgNHOm83Q7aFWHoY94kKgEBnwKJiteYVUoiFRKHcYP1UY4BiTuQWhmOGmE8EvvfDlSa+uASyObes20uPVOklB+wGMKxGJkJvYrKI7Zf4gyA==,iv:0xfZ33fT248gWM59LrHN5Iq19mEB1/gCdlWpmFY2dzk=,tag:Dx7eOVC1Q/jMoTqaBCAnLw==,type:comment]
+    #ENC[AES256_GCM,data:XswGOzgwZrjmWw3+9HA1xMx954JbXyP6JLHW9M6Xg5eS4ldduV8LUhn3sTskQENa2qSqiiFvAtc4G0OdwAcziDNPND+U6zQaUNLS96TsuC4=,iv:VHrPgUeQnfD8C/M1Mz0eSrsnC9u5g6OEpjx213dVHOA=,tag:wuc8g7ZYqm0mFGASTJ9v/w==,type:comment]
+    #ENC[AES256_GCM,data:uO4PziZ4pcLOaH7GuBpxIfiQnr3NA/aQkqNp5exBcnQ6MC2XJ9tlB7cZ8uWOqusZrmBT09vc,iv:RqdhOc/Qh4UGzSARHg//h566qyZ/82ipcbv1T0xpPOk=,tag:U+zpX7royaN7jeRFVKYleQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:C1Q3akpckNs4M938,iv:UCocmR03ZBgni24x4TmcrPlyXuveI4NE0iM+u3qO0dY=,tag:904Q9isumjn57V5iCo1UFA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:bOrKt0QwQLi1BaFX/QrTUaw=,iv:VFXagILWPOsNyN602EKy9J9dGtdfttLzKnVrdOFTIC4=,tag:tsz/gVXH5TpDuUi0DZJLwQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:SZDUZL6CtgMbs7t6y+UeVidblTuRQuZTYCo4I+2dd00=,iv:vPuGwFimHe1EAnq3N0gQi2pCDzwmGrIW5HVR4dRwUnM=,tag:V+jEAj1pOqiBDJEYZO0uvg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:QZnSZPrdv0FN27tBZLsQF6NMSAtH7Kl9yZsMKaE7lBcT2LiS5vg6+g==,iv:Zs9p865FX5aFSuhKidmR+RMbn1sn1gJEiElCRX5hp0U=,tag:EsuV1nPgeqrqUZetpwxzFA==,type:str]
+    #ENC[AES256_GCM,data:VfAy50cu05sCNJfkF/lw/Sp3vxUl8CPouDQcBNh146GhKR6dT8SMgPs7ve+khEGvtbej2XdgnFL4/ZJx6zRnnA==,iv:Qr7qbEJimmkK8FJ1KYiD19BiVD/wa8dTwN6jo31NigI=,tag:pbSBRwCT4fZ2E/7T6w8K8Q==,type:comment]
+    #ENC[AES256_GCM,data:BHGt5zPS/y9heHZIKvA6oxTO4TL+bzAneVuVKyykHiXL4s+4JSrb7VvPtSDXN2EP8Rz0jjH++sk=,iv:EETQDmrCpdlzkt/WoNjj803zXc3fCmSR0CJ1u+Bung8=,tag:seO1U05TcG7He73ABYgT1w==,type:comment]
+    #ENC[AES256_GCM,data:utt8tVnSfYUWBEn+Tq4n2t7oAW8cWyQ8sA==,iv:hfojgrFvdCzLR43pcBlY2tcpWydcXx0yLRy4UlzrTcI=,tag:8/6kCD04qZOwkeZMr3OEbQ==,type:comment]
+    #ENC[AES256_GCM,data:HQMTGmVmiN17l0ZUc5UdAk72WW12VLUZHLfaWiu4FtXHVvZPpQYbavWI7ER5WeRngFVCSjOs4d+93Q/o86fq+k79+tX3hfHrhrecvvQ=,iv:FDAxt5LPut+nzxtc1zQq1Vm+tk+WCpSMpZPn8s6itmQ=,tag:tC1CD6nCpb8DmmWc9DObZA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:xxJ+1YfOb/niMLZZsXLJ6kefB6LGHYmZO8+q1y5zOn+ez1bVwBGq9aQ2eX4bFaZF,iv:S4fKnRGcQkdq7ODx/wVv5KUBUfD1/J+JBXD8rao4wYE=,tag:eC4VqlIg89qK5+q7DVmuRg==,type:str]
+    #ENC[AES256_GCM,data:8yeMi8nspxyXww44Qc9BjRA21Wqtox9HbcXAHPWufsjVHcGO7HO3yd16Sv6tLAPPz5LKJTSC09NaJ0F2v3bK3BuMFwTSwro=,iv:NLhCD3SppV+tGQ3ZQYeWhJqLt6qv6/4Aqa6XikIY3SU=,tag:/sSt+QAVww3xatszf/PQ/g==,type:comment]
+    #ENC[AES256_GCM,data:TVYt3lES4Q9aRQsP+9Rd39J89l1c5n6+Iq5JY6L3iv9Bvj31CGQ8RzY3i2q8V4Bo+xs/4zOM,iv:D+DY5WAxgcr/tky771vVjuFBEvNQdJOt+ryWFZ5+3y4=,tag:sLnAIiY0O6v6dh4Yu1OjtQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:LsVlkP3kmA==,iv:d61aJFMzM8vsL7zSMs/QCEU3MnakBVcJgu4U3O5CRqo=,tag:aKU9948zXg4eVBc4U/w7Tw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:ZW/gT6YhcdnPXnCuPVLK8inQVxk=,iv:qAg89/tNInf/Usn98wNxHA3j/3CWSmHF9w5fdq2NHkg=,tag:iWH7lNtyzU/vwxSkKJTv5A==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:PkslLQg+0NOQ3SQ=,iv:tLNwY3l5khNW7onxRUJ2bDJO2NYwwPLJXxweTA1RuXY=,tag:nL4Ye0CIbn5pCbylBB42UQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:ybyZony2OfhO59u+4OQ1,iv:NtrCZzwin2XiCOlnmGp5lkHLqvSvLdWxiDZmQ88VkAo=,tag:kkH2Ef3stUReDIvJiiMa2Q==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:MGf/JQGZocKNGMlFIy9aSuvXy1n65FkZUg==,iv:1BwniSoElB5RGggez8jxzpuv1Bn5ocApKfz3c91ZPxY=,tag:BBGfZlbWZs5jaH8bsjJmag==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:TdmaIgcFkpdp6G2RqDsRxyWyvqEs0STIfaCexHItaw==,iv:9zBS0f7eYyca1evVjpPQLsYy4gMb537n5m96xdkssG4=,tag:utmpGtAHCNhuCzdj5fJzdA==,type:str]
+    #ENC[AES256_GCM,data:UjWe0RieYLpqgsoTwGLWNkMVNqnq2X5B3I9Q5H2cX+MFq3tSs+w=,iv:MxaTAPtYKRd11NkK+F6sMRNsj8BtKCPdD0r1LzzJKfA=,tag:I4lDTOuRB4cMeQw0AtOoYw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:HO39B2dSBQlDsL2cdI/2gFdU658=,iv:KpJ8QWfkGwobd2+jIyQAXZxe92adGNL3DdO6QQVGxq8=,tag:9DinHpYS4gzX+Mu7fq17yQ==,type:str]
+    #ENC[AES256_GCM,data:c2O73TtRz1V4+u/sq9s=,iv:SfLG7WaIJRIXpgy8pw7v5vq0/bL2oYruVMa3+DPuJQE=,tag:DRgv+XLm4u/OVW9W56dsLQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:nh9tW8wEub1VRJKvFg==,iv:jmu3T1RXLmY8T85zyVh5fFcQX0/n+wqhOH/RiqV9Wo4=,tag:lP0aEUUBU98qrO0jJLd2bQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:U51DkQyPI4cqPFKMJg==,iv:Qosr9v1G7R28eC2QLuFobofeu7+u3apHQjc2Zp9wnM4=,tag:J7pO8+QCVfgZbRJhLCw9Iw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:HAALsg==,iv:PalJwLpTIvpjiQCvO8/cWaczcSuwMr28hPzjHVisdJ8=,tag:RvEDMN+mvlnndQLXC1w1VQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJQXZLcTdpa2hPNjFOamt4
-            OG9HN3RDTUpzWkdNNEFWMWNUVldTeEI2Vmg0CnJUMkQxeHo1ZC9jUEhLckxUYnU5
-            QWpZcW1CL0pCa3luM3RLNGtrdGxnYzgKLS0tIE1PNkxZOVVmcEVDQTl2Yys5Vzkx
-            K2p3aklDa0lUWmYrclcrSlVXcWdDNjAKRxIBplXj6d2BQkqhdqIWmut5F+j5dXmQ
-            2pwyALxw2W3WnNn0fnRoK3n8PdYCrd8c+6xix17yCtVraQ1bgy6nQA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqc2szcEtsb000V0Fadysy
+            MlJyNG1sMnNzSzBDV3dmbHo1VWZLUjdaSkJVCnoxQjdNcGJXWUk2eUZZL2FjK3Rx
+            TU84ZDB6UXRXM1ZDekpGZDU2RTIrZ2cKLS0tIGtRVGhENDI2dGc4Qk5MMCsrWU5k
+            RDlHMFoxTUt2cC83QXBiUHU4WGJNd2sKnLzSeJ6zaPvve/KrTsJKvK19Eb0OUUNf
+            YC/ZJWrWkl10ciUUzxu0PWhK9UqtTGkzU/xP29J3G7IN7wtknYwvwA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-12T18:27:45Z"
-    mac: ENC[AES256_GCM,data:v9naXC0rdLMnXBplcmn02qc3pNSnY2IVOp0HzzhcYT4flSc0OpJfHfmNG2lNrK3nNU3U+fsHMTli6RBUyzJ3e+iS7OJplkeVvSKnvCaCgQ37+UM5+kmWL2Lu9t+bwzhFiPKAd7qTikCa89LGzGJaeiY8pbxvFNANMKcoAlM/cyQ=,iv:DG17FOa3V2LwCq80q3wsGwBnz/SSTDINjvCluyS0bnQ=,tag:YM92XZUtFz0KvAz5jmZXjw==,type:str]
+    lastmodified: "2025-01-12T18:30:46Z"
+    mac: ENC[AES256_GCM,data:SXDN1XBmt1oQysW3nmqEyV8ghTHON9LSLSfsgSsPIx2ua8ZmN0LVOYx7Eg9xNggrvvTNAAyaAnSeIuxC+BlHxM7HulqPfqfmX/cqwwwEwLRa1MzIhGOauE+VTLtJ/ZvkUzVSb6bIPRkb+hRq/rqf7bJngOlE7e4Arxjk7aMk5qc=,iv:HyG0yMmYRQc2A/bfMTnU0yzBbn/wnWwMZRn/0rTUd5I=,tag:wMsc356xixSmptRV2k1NCg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
